force-app/main/default/objects/RegionWiseApprovalLevels__c/RegionWiseApprovalLevels__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RegionWiseApprovalLevels</label>
</CustomObject>