force-app/main/default/objects/RegionWiseApprovalLevels__c/fields/APACRegion__c.field-meta.xml
<CustomField>
    <fullName>APACRegion__c</fullName>
    <label>APACRegion</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>