force-app/main/default/objects/RegionWiseApprovalLevels__c/fields/EMEARegion__c.field-meta.xml
<CustomField>
    <fullName>EMEARegion__c</fullName>
    <label>EMEARegion</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>