force-app/main/default/objects/RegionWiseApprovalLevels__c/fields/NARegion__c.field-meta.xml
<CustomField>
    <fullName>NARegion__c</fullName>
    <label>NARegion</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>